# C-PlusPlus

MusicPlaylist/: CMakeLists.txt  CMakeUserPresets.json  MusicPlaylist.sln  MusicPlaylist.vcxproj  MusicPlaylist.vcxproj.filters
MusicPlaylist/include/: AudioBridge.h  PlaylistManager.h  Song.h
MusicPlaylist/src/: AudioBridge.cpp  PlaylistManager.cpp  Song.cpp  main.cpp
MusicPlaylist/ui/: Helpers.js  main.qml  resources.qrc
RandomNumberGuesser/: RandomNumberGuesser.cpp  RandomNumberGuesser.sln  RandomNumberGuesser.vcxproj  RandomNumberGuesser.vcxproj.filters
StudentManagementSystem/: Student.cpp  Student.h  StudentManagementSystem.sln  StudentManagementSystem.vcxproj  StudentManagementSystem.vcxproj.filters  StudentManager.cpp  StudentManager.h  Subject.cpp  Subject.h  SubjectManager.h  Tools.cpp  Tools.h  main.cpp  todo.txt
TicTacToe/: TicTacToe.cpp  TicTacToe.sln  TicTacToe.vcxproj
ToDoList/: ToDoList.cpp  ToDoList.sln  ToDoList.vcxproj
